# fftk

./: Changelog.txt  LISCENCE  README.md  Readme.md
_includes/: meta.html
_layouts/: default.html
assets/css/: styles.css
docs/: _config.yml  index.html
trunk/: CMakeLists.txt  Doxyfile
trunk/examples/: CMakeLists.txt  main.cc
trunk/lib/: CMakeLists.txt  communicate.cc  communication.cc  communication.h  fftk.cc  fftk.h  fftk_def_vars.h  finalise.cc  global.h  initialise.cc  transform.cc  utilities.cc  utilities.h
trunk/lib/adapter/: FFTW_Adapter.cc  FFTW_Adapter.h  FFTW_Adapter_def_vars.h
trunk/lib/basis/: FFF.cc  FFF.h  FFZ.cc  FFZ.h  SFF.cc  SFF.h  SSF.cc  SSF.h  SSS.cc  SSS.h
trunk/lib/pkgconfig/: fftk.pc.in
